# cctx

./: .gitignore  CLAUDE.md  README.md  SPEC.md  cctx.yaml.example  pyproject.toml
cctx/: __init__.py  assembler.py  cli.py  config.py  harvester.py  watcher.py
cctx/extractors/: docstrings.py  markdown.py
cctx/sources/: github.py  local.py
tests/: test_assembler.py  test_config.py  test_docstrings.py  test_github.py  test_harvester.py  test_markdown.py
tests/fixtures/sample_repo/: CHANGELOG.md  README.md
tests/fixtures/sample_repo/docs/: architecture.md  cli.md
tests/fixtures/sample_repo/src/mylib/: __init__.py  analyzer.py
